// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleTransition should default using the horizontal transition 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`ScaleTransition should default using the horizontal transition 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-transition--scale-enter rmd-transition--scale-enter-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should default using the horizontal transition 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should default using the horizontal transition 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-transition--scale-exit rmd-transition--scale-exit-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should default using the horizontal transition 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class rmd-transition--scale-exit rmd-transition--scale-exit-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class rmd-transition--scale-enter rmd-transition--scale-enter-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should merge the className and allow to be rendered by default 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="custom-class"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should render correctly for a vertical transition 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`ScaleTransition should render correctly for a vertical transition 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-transition--scale-y-enter rmd-transition--scale-y-enter-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should render correctly for a vertical transition 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should render correctly for a vertical transition 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="rmd-transition--scale-y-exit rmd-transition--scale-y-exit-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`ScaleTransition should render correctly for a vertical transition 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;
